k8s/jaeger-service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: jaeger-external
  namespace: istio-system
spec:
  hosts:
  - host.docker.internal
  ports:
  - number: 4318
    name: otlp-http
    protocol: HTTP
  location: MESH_EXTERNAL
  resolution: DNS
